# CMakeList.txt : CMake project for CMakeExercise, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeExercise "CMakeExercise.cpp" "CMakeExercise.h" "CMakeMatrix.cpp" "CMakeMatrix.h" "Main.cpp")

# TODO: Add tests and install targets if needed.
